# actix-diesel-test

./: .env  .gitignore  Cargo.toml  Dockerfile  README  README.md  data.csv  docker-compose.yml
migrations/2019-10-03-145218_create_users/: up.sql
migrations/2019-10-13-194354_create_product/: up.sql
migrations/2019-10-24-222837_create_users/: up.sql
migrations/2019-10-24-222840_create_products/: up.sql
src/: db_connection.rs  lib.rs  models.rs  schema.rs
src/handlers/: mod.rs  pool_handler.rs  user.rs
src/models/: product.rs  user.rs
src/templates/: user.rs
templates/: add_user.html  base.html  user.html  users.html
