[package]
name = "web"
version = "0.1.0"
authors = ["tclonier <tclonier@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"] }
askama = { version = "0.8", features = ["with-actix-web"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
dotenv = "0.10"
serde = "1.0"
csv = "1.1"